Change tag to Latest

--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.5'
 services:
   traefik:
-    image: traefik:v2.6.2
+    image: traefik:latest
     container_name: traefik
     environment:
       - PUID=1000
