--- a/sftp/docker-compose.yml
+++ b/sftp/docker-compose.yml
@@ -31,6 +31,7 @@ services:
         - "SFTPGO_COMMON__DEFENDER__THRESHOLD=5"
         - "SFTPGO_COMMON__DEFENDER__OBSERVATION_TIME=30"           
     volumes:
-      - /mnt/nas/:/srv/sftpgo/data
+      - /docker/sftp/data:/srv/sftpgo/data
       - /docker/sftp/backups:/srv/sftpgo/backups
       - /docker/sftp/config:/var/lib/sftpgo
+      - /mnt/nas:/srv/sftp/nas
