--- a/deluge/docker-compose.yml
+++ b/deluge/docker-compose.yml
@@ -3,7 +3,7 @@
 version: '3'
 services:
   deluge:
-    image: lscr.io/linuxserver/deluge:latest
+    image: lscr.io/linuxserver/deluge:amd64-2.0.5-0202202181752ubuntu20.04.1-ls140
     container_name: deluge
     restart: unless-stopped
     environment:
