--- a/komga/docker-compose.yml
+++ b/komga/docker-compose.yml
@@ -12,8 +12,8 @@ services:
     logging:
       driver: "json-file"
       options:
-        - max-file: 5
-        - max-size: 1m
+        max-file: 5
+        max-size: 1m
     volumes:
       - /docker/komga/config:/config
       - /mnt/nas/Library/Comics:/comics
