--- a/deluge/docker-compose.yml
+++ b/deluge/docker-compose.yml
@@ -6,6 +6,11 @@ services:
     image: lscr.io/linuxserver/deluge:amd64-2.0.5-0202202181752ubuntu20.04.1-ls140
     container_name: deluge
     restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        - max-file: 5
+        - max-size: 1m
     environment:
       - PUID=1000
       - PGID=1000
