--- a/guacozy/docker-compose.yml
+++ b/guacozy/docker-compose.yml
@@ -12,6 +12,11 @@ services:
       - FIELD_ENCRYPTION_KEY=qjq4ObsXMqiqQyfKgD-jjEGm4ep8RaHKGRg4ohGCi1A=
       - DJANGO_DB_URL=postgres://postgres@db:5432/postgres
       - DJANGO_ALLOWED_HOSTS=*
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 1m
     labels:
       - traefik.enable=true
       - traefik.http.routers.guac.rule=Host(`guac.tuckeredoutbert.com`)  
@@ -24,10 +29,20 @@ services:
   guacd:
     image: guacamole/guacd
     restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 1m
     networks:
       - DockerInternal
   db:
     image: postgres:10.4-alpine
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 1m
     restart: always
     networks:
       - DockerInternal
