--- a/deluge/docker-compose.yml
+++ b/deluge/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     logging:
       driver: "json-file"
       options:
-        - max-file: 5
-        - max-size: 1m
+        max-file: 5
+        max-size: 1m
     environment:
       - PUID=1000
       - PGID=1000
