--- a/ombi/docker-compose.yml
+++ b/ombi/docker-compose.yml
@@ -8,6 +8,11 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=America/Chicago
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 1m
     volumes:
       - /docker/ombi/config:/config
     labels:
