--- a/sftp/docker-compose.yml
+++ b/sftp/docker-compose.yml
@@ -3,6 +3,11 @@ services:
   sftpgo:
     image: drakkan/sftpgo:latest
     container_name: sftpgo
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 1m
     restart: unless-stopped
     network_mode: DockerInternal
     ports:
