--- a/sabnzbd/docker-compose.yml
+++ b/sabnzbd/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         max-size: 1m
     volumes:
       - /docker/sabnazbd/config:/config
-      - /mnt/nas/Downloads/nzb/complete:/downloads #optional
+      - /mnt/nas/Downloads/nzb:/downloads #optional
       - /mnt/nas/Downloads/nzb/intermediate:/incomplete-downloads #optional
     network_mode: DockerInternal
     ports:
