Updated single to double quote

--- a/audiobookshelf/docker-compose.yml
+++ b/audiobookshelf/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - 13378:13378
     volumes:
-      - '/mnt/nas/LLibrary/Audio\ Books':/audiobooks
+      - "/mnt/nas/LLibrary/Audio\ Books":/audiobooks
       #- </path/to/podcasts>:/podcasts
       - /mnt/nas/audiobookshelf/config:/config
       - /mnt/nas/audiobookshelf/metadata:/metadata
@@ -14,7 +14,6 @@ services:
       options:
         max-file: 5
         max-size: 1m
-
     networks:
       DockerExternal:
       DockerInternal:
