--- a/sonarr/docker-compose.yml
+++ b/sonarr/docker-compose.yml
@@ -68,23 +68,7 @@ services:
       ports:
         - 8686:8686
       restart: unless-stopped
-      
-  #jackett:
-  #  image: lscr.io/linuxserver/jackett:latest
-  #  container_name: jackett
-  #  environment:
-  #    - PUID=1000
-  #    - PGID=1000
-  #    - TZ=America/Chicago
-  #    - RUN_OPTS=run options here #optional
-  #  volumes:
-  #    - /docker/jackett/config:/config
-  #    - /mnt/nas/Downloads/:/downloads
-  #  network_mode: DockerInternal
-  #  ports:
-  #    - 9117:9117
-  #  restart: unless-stopped
-    
+          
   prowlarr:
     image: lscr.io/linuxserver/prowlarr:develop
     container_name: prowlarr
@@ -122,43 +106,43 @@ services:
  #     - 8090:8090
  #   restart: unless-stopped
 
-#  readarr:
-#    image: hotio/readarr:unstable
-#    container_name: readarr
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - TZ=America/Chicago
-#    volumes:
-#      - /docker/readarr/config:/config
-#      - /mnt/nas/Library/:/library
-#      - /mnt/nas/Downloads/nzb:/downloadsnzb
-#      - /mnt/nas/Downloads/Complete:/downloadstor
-#    network_mode: DockerInternal
-#    ports:
-#      - 8787:8787
-#    restart: unless-stopped
-
-  lazylibrarian:
-    image: lscr.io/linuxserver/lazylibrarian:latest
-    container_name: lazylibrarian
+  readarr:
+    image: hotio/readarr:unstable
+    container_name: readarr
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=America/Chicago
-      - DOCKER_MODS=linuxserver/calibre-web:calibre #optional
-    logging:
-      driver: "json-file"
-      options:
-        max-file: 5
-        max-size: 1m
     volumes:
-      - /docker/lazylibrarian/config:/config
+      - /docker/readarr/config:/config
       - /mnt/nas/Library/:/library
-      - /mnt/nas/Downloads/nzb/nzb:/watch
       - /mnt/nas/Downloads/nzb:/downloadsnzb
       - /mnt/nas/Downloads/Complete:/downloadstor
     network_mode: DockerInternal
     ports:
-      - 5299:5299
+      - 8787:8787
     restart: unless-stopped
+
+#  lazylibrarian:
+#    image: lscr.io/linuxserver/lazylibrarian:latest
+#    container_name: lazylibrarian
+#    environment:
+#      - PUID=1000
+#      - PGID=1000
+#      - TZ=America/Chicago
+#      - DOCKER_MODS=linuxserver/calibre-web:calibre #optional
+#    logging:
+#      driver: "json-file"
+#      options:
+#        max-file: 5
+#        max-size: 1m
+#    volumes:
+#      - /docker/lazylibrarian/config:/config
+#      - /mnt/nas/Library/:/library
+#      - /mnt/nas/Downloads/nzb/nzb:/watch
+#      - /mnt/nas/Downloads/nzb:/downloadsnzb
+#      - /mnt/nas/Downloads/Complete:/downloadstor
+#    network_mode: DockerInternal
+#    ports:
+#      - 5299:5299
+#    restart: unless-stopped
