--- a/sonarr/docker-compose.yml
+++ b/sonarr/docker-compose.yml
@@ -96,6 +96,11 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=America/Chicago
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 1m
     volumes:
       - /docker/mylar/config:/config
       - /mnt/nas/Library/Comics:/comics
@@ -113,6 +118,11 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=America/Chicago
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 1m
     volumes:
       - /docker/readarr/config:/config
       - /mnt/nas/Library/:/library
