--- a/viseron/docker-compose.yml
+++ b/viseron/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         max-file: 5
         max-size: 1m
     volumes:
-      - /docker/viseron/recordings:/recordings
+      - /mnt/nas/bk/rec:/recordings
       - /docker/viseron/config:/config
       - /etc/localtime:/etc/localtime:ro
     network_mode: DockerInternal
