--- a/sonarr/docker-compose.yml
+++ b/sonarr/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - "/mnt/nas/TV\ Shows/:/tv"
       - /mnt/nas/Downloads/nzb/:/downloadsnzb
       - /mnt/nas/Downloads/Complete/:/downloadstor
-      - /mnt/nas/bk/arrbackup/:/arrbackup
+      - /mnt/nas/bk/arrbackup:/arrbackup
     network_mode: DockerInternal
     ports:
       - 8989:8989
@@ -42,7 +42,7 @@ services:
         - /mnt/nas/Movies/:/movies
         - /mnt/nas/Downloads/nzb:/downloadsnzb
         - /mnt/nas/Downloads/Complete:/downloadstor
-        - /mnt/nas/bk/arrbackup/:/arrbackup
+        - /mnt/nas/bk/arrbackup:/arrbackup
       network_mode: DockerInternal
       ports:
         - 7878:7878
@@ -66,7 +66,7 @@ services:
         - /mnt/nas/Music:/music
         - /mnt/nas/Downloads/nzb:/downloadsnzb
         - /mnt/nas/Downloads/Complete:/downloadstor
-        - /mnt/nas/bk/arrbackup/:/arrbackup
+        - /mnt/nas/bk/arrbackup:/arrbackup
       network_mode: DockerInternal
       ports:
         - 8686:8686
@@ -87,7 +87,7 @@ services:
     volumes:
       - /docker/prowlarr/config:/config
       - /mnt/nas/Downloads/:/downloads
-      - /mnt/nas/bk/arrbackup/:/arrbackup
+      - /mnt/nas/bk/arrbackup:/arrbackup
     network_mode: DockerInternal
     ports:
       - 9696:9696
@@ -110,7 +110,7 @@ services:
       - /mnt/nas/Library/Comics:/comics
       - /mnt/nas/Downloads/nzb:/downloadsnzb
       - /mnt/nas/Downloads/Complete:/downloadstor
-      - /mnt/nas/bk/arrbackup/:/arrbackup
+      - /mnt/nas/bk/arrbackup:/arrbackup
     network_mode: DockerInternal
     ports:
       - 8090:8090
@@ -133,32 +133,8 @@ services:
       - /mnt/nas/Library/:/library
       - /mnt/nas/Downloads/nzb:/downloadsnzb
       - /mnt/nas/Downloads/Complete:/downloadstor
-      - /mnt/nas/bk/arrbackup/:/arrbackup
+      - /mnt/nas/bk/arrbackup:/arrbackup
     network_mode: DockerInternal
     ports:
       - 8787:8787
     restart: unless-stopped
-
-#  lazylibrarian:
-#    image: lscr.io/linuxserver/lazylibrarian:latest
-#    container_name: lazylibrarian
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - TZ=America/Chicago
-#      - DOCKER_MODS=linuxserver/calibre-web:calibre #optional
-#    logging:
-#      driver: "json-file"
-#      options:
-#        max-file: 5
-#        max-size: 1m
-#    volumes:
-#      - /docker/lazylibrarian/config:/config
-#      - /mnt/nas/Library/:/library
-#      - /mnt/nas/Downloads/nzb/nzb:/watch
-#      - /mnt/nas/Downloads/nzb:/downloadsnzb
-#      - /mnt/nas/Downloads/Complete:/downloadstor
-#    network_mode: DockerInternal
-#    ports:
-#      - 5299:5299
-#    restart: unless-stopped
