--- a/sftp/docker-compose.yml
+++ b/sftp/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
         - "9922:22"       
     volumes:
-      - /mnt/nas/upload:/home/upload
+      - /mnt/nas/upload:/home/$user/upload
       - "/mnt/nas/TV Shows":/home/tv:ro
       - /mnt/nas/Movies:/home/movies:ro
       - /mnt/nas/Library:/home/library:ro
