--- a/sftp/docker-compose.yml
+++ b/sftp/docker-compose.yml
@@ -9,7 +9,9 @@ services:
         max-size: 1m
     restart: unless-stopped
     network_mode: DockerInternal
-    privileged: true
+    securityContext:
+      privileged: 
+        - true
     cap_add:
       - SYS_ADMIN
     ports:
