--- a/sftp/docker-compose.yml
+++ b/sftp/docker-compose.yml
@@ -9,6 +9,7 @@ services:
         max-size: 1m
     restart: unless-stopped
     network_mode: DockerInternal
+    privileged: true
     cap_add:
       - SYS_ADMIN
     ports:
