--- a/sabnzbd/docker-compose.yml
+++ b/sabnzbd/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=America/Chicago
-      - UMASK_SET=022 #optional
+      #- UMASK_SET=022 #optional
     logging:
       driver: "json-file"
       options:
