--- a/sabnzbd/docker-compose.yml
+++ b/sabnzbd/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         max-file: 5
         max-size: 1m
     volumes:
-      - /docker/sabnazbd/config:/config
+      - /docker/sabnzbd/config:/config
       - /mnt/nas/Downloads/nzb:/downloads #optional
       - /mnt/nas/Downloads/nzb/intermediate:/incomplete-downloads #optional
       - /mnt/nas/bk/sabnzbd:/backup
