--- a/kuma/docker-compose.yml
+++ b/kuma/docker-compose.yml
@@ -1,11 +1,26 @@
 services:
   uptime-kuma:
     image: louislam/uptime-kuma:1
+    container_name: uptime-kuma-1
     logging:
       driver: "json-file"
       options:
         max-file: 5
         max-size: 1m
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.uptime-kuma.rule=Host(`status.tuckeredoutbert.com`)  
+      - traefik.http.routers.uptime-kuma.entrypoints=web-secure
+      - traefik.http.routers.uptime-kuma.tls.certresolver=lets-encrypt
+      - traefik.http.services.uptime-kuma.loadbalancer.server.port=3001
+      - traefik.docker.network=DockerExternal
+      - traefik.http.routers.redirect-router.middlewares=redirect-regex
+      - traefik.http.middlewares.redirect-regex.redirectregex.regex=(.)*
+      - traefik.http.middlewares.redirect-regex.redirectregex.replacement=https://status.tuckeredoutbert.com//status//tob
+      - traefik.http.middlewares.redirect-regex.redirectregex.permanent=false
+    networks:
+      DockerExternal:
+      DockerInternal:
     volumes:
       - /docker/kuma/config:/app/data
       - /var/run/docker.sock:/var/run/docker.sock
@@ -13,3 +28,9 @@ services:
       # <Host Port>:<Container Port>
       - 3001:3001
     restart: unless-stopped
+    
+networks:
+  DockerExternal:
+    external: true
+  DockerInternal:
+    external: true    
