--- a/kuma/docker-compose.yml
+++ b/kuma/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - traefik.docker.network=DockerExternal
       - traefik.http.routers.redirect-router.middlewares=redirect-regex
       - traefik.http.middlewares.redirect-regex.redirectregex.regex=(.)*
-      - traefik.http.middlewares.redirect-regex.redirectregex.replacement=https://status.tuckeredoutbert.com//status//tob
+      - traefik.http.middlewares.redirect-regex.redirectregex.replacement=https://status.tuckeredoutbert.com/status/tob
       - traefik.http.middlewares.redirect-regex.redirectregex.permanent=false
     networks:
       DockerExternal:
