--- a/kuma/docker-compose.yml
+++ b/kuma/docker-compose.yml
@@ -14,10 +14,10 @@ services:
       - traefik.http.routers.uptime-kuma.tls.certresolver=lets-encrypt
       - traefik.http.services.uptime-kuma.loadbalancer.server.port=3001
       - traefik.docker.network=DockerExternal
-      - traefik.http.routers.redirect-router.middlewares=redirect-regex
-      - traefik.http.middlewares.redirect-regex.redirectregex.regex=(.)*
-      - traefik.http.middlewares.redirect-regex.redirectregex.replacement=https://status.tuckeredoutbert.com/status/tob
-      - traefik.http.middlewares.redirect-regex.redirectregex.permanent=false
+     #- traefik.http.routers.redirect-router.middlewares=redirect-regex
+      #- traefik.http.middlewares.redirect-regex.redirectregex.regex=(.)*
+     # - traefik.http.middlewares.redirect-regex.redirectregex.replacement=https://status.tuckeredoutbert.com/status/tob
+   #   - traefik.http.middlewares.redirect-regex.redirectregex.permanent=false
     networks:
       DockerExternal:
       DockerInternal:
