--- a/kuma/docker-compose.yml
+++ b/kuma/docker-compose.yml
@@ -9,10 +9,10 @@ services:
         max-size: 1m
     labels:
       - traefik.enable=true
-      - traefik.http.routers.uptime-kuma.rule=Host(`status.tuckeredoutbert.com`)  
-      - traefik.http.routers.uptime-kuma.entrypoints=web-secure
-      - traefik.http.routers.uptime-kuma.tls.certresolver=lets-encrypt
-      - traefik.http.services.uptime-kuma.loadbalancer.server.port=3001
+      - traefik.http.routers.uptime-kuma-1.rule=Host(`status.tuckeredoutbert.com`)  
+      - traefik.http.routers.uptime-kuma-1.entrypoints=web-secure
+      - traefik.http.routers.uptime-kuma-1.tls.certresolver=lets-encrypt
+      - traefik.http.services.uptime-kuma-1.loadbalancer.server.port=3001
       - traefik.docker.network=DockerExternal
      #- traefik.http.routers.redirect-router.middlewares=redirect-regex
       #- traefik.http.middlewares.redirect-regex.redirectregex.regex=(.)*
