--- a/kuma/docker-compose.yml
+++ b/kuma/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - traefik.enable=true
       - traefik.http.routers.uptime-kuma.rule=Host(`status.tuckeredoutbert.com`)  
       - traefik.http.routers.uptime-kuma.entrypoints=web-secure
+      - traefik.http.routers.uptime-kuma.tls=true
       - traefik.http.routers.uptime-kuma.tls.certresolver=lets-encrypt
       - traefik.http.services.uptime-kuma.loadbalancer.server.port=3001
       - traefik.docker.network=DockerExternal
