--- a/heimdall/docker-compose.yml
+++ b/heimdall/docker-compose.yml
@@ -5,7 +5,12 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Etc/UTC
+      - TZ=America/Chicago
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 1m
     volumes:
       - /docker/heimdall/config:/config
     ports:
