--- a/home-assistant/docker-compose.yml
+++ b/home-assistant/docker-compose.yml
@@ -4,6 +4,11 @@ services:
     image: "ghcr.io/home-assistant/home-assistant:stable"
 #    environment:
 #      - DISABLE_JEMALLOC: true
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 1m
     volumes:
       - /docker/home-assistant/config:/config
       - /etc/localtime:/etc/localtime:ro
@@ -12,3 +17,18 @@ services:
     network_mode: host
 #    devices:
 #      - /dev/ttyUSB0:/dev/ttyUSB0
+  matter-server:
+    container_name: matter-server
+    image: ghcr.io/home-assistant-libs/python-matter-server:stable
+    restart: unless-stopped
+    security_opt:
+      - apparmor=unconfined
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 1m
+    volumes:
+      - /docker/matter-server/config:/data
+      - /run/dbus:/run/dbus:ro
+    network_mode: host
