--- a/viseron/docker-compose.yml
+++ b/viseron/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - /docker/viseron/config:/config
       - /etc/localtime:/etc/localtime:ro
     network_mode: DockerInternal
+    restart: unless-stopped
     ports:
       - 8888:8888
       
