--- a/guacamole/docker-compose.yml
+++ b/guacamole/docker-compose.yml
@@ -20,9 +20,9 @@ services:
       - pgpass
     environment:
       PGDATA: /var/lib/postgresql/data/guacamole
-      POSTGRES_DB: guacamole_db
-      POSTGRES_PASSWORD: pgpass
-      POSTGRES_USER: pgadmin
+      POSTGRESQL_DB: guacamole_db
+      POSTGRESQL_PASSWORD: pgpass
+      POSTGRESQL_USER: guacamole_user
     logging:
       driver: "json-file"
       options:
@@ -45,10 +45,10 @@ services:
     environment:
       WEBAPP_CONTEXT: "ROOT"
       GUACD_HOSTNAME: guacd
-      POSTGRES_DATABASE: guacamole_db
-      POSTGRES_HOSTNAME: postgres
-      POSTGRES_PASSWORD: pgpass
-      POSTGRES_USER: pgadmin
+      POSTGRESQL_DATABASE: guacamole_db
+      POSTGRESQL_HOSTNAME: postgres
+      POSTGRESQL_PASSWORD: pgpass
+      POSTGRESQL_USER: guacamole_user
     networks:
       DockerInternal:
       DockerExternal:
