--- a/guacamole/docker-compose.yml
+++ b/guacamole/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     restart: always
     volumes:
      # - /docker/guacamole/config/init/initdb.sql:/initdb.sql
-      - /docker/guacamole/config/init/initdb.sql:/docker-entrypoint-initdb.d 
+      - /docker/guacamole/config/init:/docker-entrypoint-initdb.d 
       - /docker/guacamole/config/data:/var/lib/postgresql/data:Z
   guacamole:
     image: guacamole/guacamole
